fixing overflow issue

--- a/src/style/utilities.scss
+++ b/src/style/utilities.scss
@@ -48,3 +48,7 @@
     content: 'by'
   }
 }
+
+.container {
+  overflow-x: hidden;
+}
